Fix List.getFirst() to get(0) for Java compatibility
Co-authored-by: maitry291 <83761752+maitry291@users.noreply.github.com>