@@ -53,7 +53,7 @@ public class GlobalExceptionHandler{
         for (ObjectError error : allErrors) {
             logger.error("Validation error (refId={}): {}", traceId, error.getDefaultMessage());
         }
-        String errorMessage = allErrors.isEmpty() ? "Validation error" : allErrors.getFirst().getDefaultMessage();
+        String errorMessage = allErrors.isEmpty() ? "Validation error" : allErrors.get(0).getDefaultMessage();
         ErrorDetails error = new ErrorDetails(AppConstants.BAD_REQUEST, errorMessage, formatTraceIdForError(traceId));
         return ResponseEntity.badRequest().body(new BaseResponse<>(AppConstants.BAD_REQUEST_MESSAGE, false, error));
     }
